--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="pricing.html">
-                                <img style="width: 35px; margin-inline: 1em;" src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
+                                <img style="width: 35px; margin-inline: 1em;" src="./images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
                             </a>
                         </li>
                         <li class="nav-item">
