--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="pricing.html">
-                                <img style="width: 35px; margin-inline: 1em" src="/source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
+                                <img style="width: 35px; margin-inline: 1em" src="./source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
                             </a>
                         </li>
                     </ul>
