--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="pricing.html">
-                                <img style="width: 35px; margin-inline: 1em;" src="./source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
+                                <img style="width: 35px; margin-inline: 1em;" src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="pricing.html">
-                                <img style="width: 35px; margin-inline: 1em" src="./source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
+                                <img style="width: 35px; margin-inline: 1em" src="/source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
                             </a>
                         </li>
                     </ul>
@@ -53,7 +53,7 @@
     </header>
     <section>
         <div class="bgvideo">
-            <video src="./source/files/mixkit-stars-in-space-background-1610-medium.mp4" type="video/mp4" autoplay muted loop></video>
+            <video src="/source/files/mixkit-stars-in-space-background-1610-medium.mp4" type="video/mp4" autoplay muted loop></video>
             <div class="effect"></div>
 <div class="video-text">
     <h1>Future s here</h1>
@@ -93,7 +93,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -105,7 +105,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -117,7 +117,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -129,7 +129,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -141,7 +141,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -154,7 +154,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
+                                                    <img src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem, ipsum dolor.</p>
@@ -166,7 +166,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
+                                                    <img src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem, ipsum dolor.</p>
@@ -192,7 +192,7 @@
                                 <p>Can we help you?</p></a>
                             </div>
                             <div class="col-lg-12 col-md-12 text-center mt-4">
-                                <img class="call-anim" style="width: 40px;" src="./source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
+                                <img class="call-anim" style="width: 40px;" src="/source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
                             </div>
                         </div>
                     </div>
@@ -228,8 +228,8 @@
                     <p>Contacts <br>Job<br>Our Team</p>
                 </div>
                 <div class="col-lg-4 col-md-12 media-links">
-                    <img style="width: 40px; margin-inline: 1em" src="./source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
-                    <img style="width: 40px; margin-inline: 1em;" src="./source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
+                    <img style="width: 40px; margin-inline: 1em" src="/source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
+                    <img style="width: 40px; margin-inline: 1em;" src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
                 </div>
             </div>
         </div>
