--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="pricing.html">
-                                <img style="width: 35px; margin-inline: 1em;" src="./images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
+                                <img style="width: 35px; margin-inline: 1em;" src="images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="pricing.html">
-                                <img style="width: 35px; margin-inline: 1em" src="/source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
+                                <img style="width: 35px; margin-inline: 1em" src="images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
                             </a>
                         </li>
                     </ul>
