--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="./source/images/1675671060_3-51.jpg" class="w-100" alt="">
+                                                    <img src="images/1675671060_3-51.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, dignissimos!</p>
@@ -93,7 +93,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -105,7 +105,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -117,7 +117,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -129,7 +129,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -141,7 +141,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="/source/images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
+                                                    <img src="images/kisspng-computer-icons-electronics-electronic-circuit-elec-technology-companies-5ae3443fc6b4b6.4410388815248435838139.jpg" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sunt porro sapiente perspiciatis. Necessitatibus a omnis voluptatem. Deleniti expedita, quasi reiciendis dolore consequuntur harum natus?</p>
@@ -154,7 +154,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
+                                                    <img src="images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem, ipsum dolor.</p>
@@ -166,7 +166,7 @@
                                         <div class="d-block w-100">
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
-                                                    <img src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
+                                                    <img src="images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" class="w-100" alt="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 slide-text">
                                                     <p>Lorem, ipsum dolor.</p>
@@ -192,7 +192,7 @@
                                 <p>Can we help you?</p></a>
                             </div>
                             <div class="col-lg-12 col-md-12 text-center mt-4">
-                                <img class="call-anim" style="width: 40px;" src="/source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
+                                <img class="call-anim" style="width: 40px;" src="images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
                             </div>
                         </div>
                     </div>
@@ -228,8 +228,8 @@
                     <p>Contacts <br>Job<br>Our Team</p>
                 </div>
                 <div class="col-lg-4 col-md-12 media-links">
-                    <img style="width: 40px; margin-inline: 1em" src="/source/images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
-                    <img style="width: 40px; margin-inline: 1em;" src="/source/images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
+                    <img style="width: 40px; margin-inline: 1em" src="images/V__8ErGQakWe7hFH4iLlDy6cSNTjWyRrdsHreqxtrsbmaiOAtlkp6bHLvDU4LsYKwddrt1-yqOi58Q2qXFCyVhKp.jpg" alt="....">
+                    <img style="width: 40px; margin-inline: 1em;" src="images/png-transparent-round-blue-circuit-logo-printed-circuit-board-computer-icons-integrated-circuits-chips-electronic-circuit-technology-miscellaneous-electronics-text.png" alt="...">
                 </div>
             </div>
         </div>
