--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/mycss.css">
-    <link rel="stylesheet" href="/source/styles/bgvideo.css">
+    <link rel="stylesheet" href="styles/bgvideo.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/source/files/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/source/files/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/source/files/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/source/files/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="files/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="files/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="files/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="files/favicon_io/site.webmanifest">
 
     <title>Hit</title>
 </head>
@@ -53,7 +53,7 @@
     </header>
     <section>
         <div class="bgvideo">
-            <video src="/source/files/mixkit-stars-in-space-background-1610-medium.mp4" type="video/mp4" autoplay muted loop></video>
+            <video src="files/mixkit-stars-in-space-background-1610-medium.mp4" type="video/mp4" autoplay muted loop></video>
             <div class="effect"></div>
 <div class="video-text">
     <h1>Future s here</h1>
