--- a/pricing.html
+++ b/pricing.html
@@ -53,7 +53,7 @@
   <div class="row">
     <div class="col-lg-4 col-md-6 mt-4">
       <div class="card" >
-  <a href="#"><img src="/source/images/1675671060_3-51.jpg" class="card-img-top" alt="price"></a>
+  <a href="#"><img src="images/1675671060_3-51.jpg" class="card-img-top" alt="price"></a>
   <div class="card-body">
   <h5 class="card-title"><a href="#">Laptops</a></h5>
   <p class="card-text"><a href="#">Some quick example text to build on the card title and make up the bulk of the card's content.</a></p>
